# python-uv-speckit-template

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/agents/: architect.agent.md  beastmode.agent.md  business-analyst.agent.md  requirements-engineer.agent.md
.github/instructions/: architect.instructions.md  business-analyst.instructions.md  requirements-engineer.instructions.md
.github/prompts/: speckit.plan.prompt.md  speckit.specify.prompt.md
.github/templates/: EPIC-template.md  FEATURE-template.md  ISSUE-template.md  constitution-draft-template.md  plan-context-template.md  specify-context-template.md
src/: main.py
