[project]
name = "python-uv-base"
version = "0.1.0"
description = "Basis-Python-Template mit uv, 80/20-Utilities und Notebook-Support"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.9.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "black>=24.0.0",
    "pytest>=8.0.0",
    "mypy>=1.10.0",
    "pytest-asyncio>=0.23.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0"
]

[tool.uv]
# Platz für spätere uv-spezifische Einstellungen
